[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "node-template"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "node-template"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.20"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
node-template-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "td-mmr" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "td-mmr" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "td-mmr" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "td-mmr" }

[features]
default = []
runtime-benchmarks = ["node-template-runtime/runtime-benchmarks"]
