[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.117' }

# local dependencies
pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "td-mmr" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "td-mmr" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-mmr = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
	'pallet-mmr/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
