[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "td-mmr" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
